# invest-schistosomiasis

./: pyproject.toml
src/: schistosomiasis.py
src/invest_schistosomiasis/: __init__.py  schistosomiasis.py
src/notebooks/: ipyleaflet.ipynb
