[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
natcap = ["notebooks/*.ipynb"]

[project]
name = "invest-schistosomiasis"
dynamic = ["version"]
dependencies = [
  "pygeoprocessing",
  "taskgraph",
  "matplotlib",
  #"natcap.invest>=3.16.1",
  "natcap.invest @ git+https://github.com/natcap/schistosomiasis-invest.git@plugin/schisto",
  "voila",
  "jupyter",
  "ipyleaflet",
  "ipywidgets",
  "geojson",
  "gdal-utils"
]

[tool.natcap.invest]
api_version = "v1"
package_name = "invest_schistosomiasis"
notebook_path = "notebooks/ipyleaflet.ipynb"
conda_dependencies = [
	"python<3.13.0",
	"gdal<3.11",
	"geotiff>=1.7.3"
]
