[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
notebooks = ["*.ipynb"]

[project]
name = "invest-schistosomiasis"
dynamic = ["version"]
dependencies = [
  "pygeoprocessing",
  "taskgraph",
  "matplotlib",
#"natcap.invest @ git+https://github.com/natcap/schistosomiasis-invest.git@schistosomiasis",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp39-cp39-macosx_10_13_x86_64.whl ; python_version=='3.9' and platform_system=='Darwin'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp310-cp310-macosx_10_13_x86_64.whl ; python_version=='3.10' and platform_system=='Darwin'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp311-cp311-macosx_10_13_x86_64.whl ; python_version=='3.11' and platform_system=='Darwin'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp312-cp312-macosx_10_13_x86_64.whl ; python_version=='3.12' and platform_system=='Darwin'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp313-cp313-macosx_10_13_x86_64.whl ; python_version=='3.13' and platform_system=='Darwin'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp39-cp9-win_amd64.whl ; python_version=='3.9' and platform_system=='Windows'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp310-cp310-win_amd64.whl ; python_version=='3.10' and platform_system=='Windows'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp311-cp311-win_amd64.whl ; python_version=='3.11' and platform_system=='Windows'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp312-cp312-win_amd64.whl ; python_version=='3.12' and platform_system=='Windows'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp313-cp313-win_amd64.whl ; python_version=='3.13' and platform_system=='Windows'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp39-cp39-manylinux_2_39_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp310-cp310-manylinux_2_39_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp311-cp311-manylinux_2_39_x86_64.whl ; python_version=='3.11' and platform_system=='Linux'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp312-cp312-manylinux_2_39_x86_64.whl ; python_version=='3.12' and platform_system=='Linux'",
  "natcap.invest @ https://storage.googleapis.com/data.naturalcapitalproject.org/ddenu/2025-12-19-schisto-bypass-compiler/natcap_invest-3.16.3.dev540+g4653d89a0-cp313-cp313-manylinux_2_39_x86_64.whl ; python_version=='3.13' and platform_system=='Linux'",
  "voila",
  "jupyter",
  "ipyleaflet",
  "ipywidgets",
  "geojson",
  "gdal-utils"
]

[tools.setuptools_scm]

[tool.natcap.invest]
api_version = "v1"
package_name = "invest_schistosomiasis"
notebook_path = "notebooks/ipyleaflet.ipynb"
conda_dependencies = [
	"python==3.10.0",
	"gdal<3.11",
	"geotiff>=1.7.3"
]
